Mantaflow adaptive domain cuts off #72253

Closed
opened 2019-12-07 15:00:55 +01:00 by Felix Holzapfel · 22 comments

System Information
Operating system: Windows
Graphics card: 2080TI

Blender Version
fluid-mantaflow-blender-2.82-0ca44974c97f-windows64

Short description of error

The minimal value for Adaptive domain Threshold is 0.01 that is so hight that the domain is clipping off the smoke simulation

**System Information** Operating system: Windows Graphics card: 2080TI **Blender Version** fluid-mantaflow-blender-2.82-0ca44974c97f-windows64 **Short description of error** The minimal value for Adaptive domain Threshold is 0.01 that is so hight that the domain is clipping off the smoke simulation

Added subscriber: @Wooody

Added subscriber: @Wooody
Brecht Van Lommel changed title from Adaptive domain cuts off to Mantaflow adaptive domain cuts off 2019-12-08 14:21:40 +01:00
Sebastián Barschkis was assigned by Brecht Van Lommel 2019-12-08 14:21:40 +01:00

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

I can imagine situation, where Margin and Add Resolution wouldn't be helpful, but it would help to have .blend file that demonstrates this clearly.

I will confirm this and see if it sticks...

I can imagine situation, where Margin and Add Resolution wouldn't be helpful, but it would help to have .blend file that demonstrates this clearly. I will confirm this and see if it sticks...

Attached you find a .blend file. please simulate to frame 260 in order to see the problem clearly. I know it’s an extreme scenario - it’s for demonstration purposes.error test.blend

Attached you find a .blend file. please simulate to frame 260 in order to see the problem clearly. I know it’s an extreme scenario - it’s for demonstration purposes.[error test.blend](https://archive.blender.org/developer/F8286482/error_test.blend)

@Wooody In the file the smoke inflow is set to 'Geometry'. Was that intentionally? So the idea is that some of that smoke will get cut off by the adaptive domain too early?

Just clarify the actual issue, can you attach an image or short video showing the bug? Thanks!

@Wooody In the file the smoke inflow is set to 'Geometry'. Was that intentionally? So the idea is that some of that smoke will get cut off by the adaptive domain too early? Just clarify the actual issue, can you attach an image or short video showing the bug? Thanks!

Yes, it was intentional in the first place. I wanted to create one smoke puff since I experienced the clipping there the first time. It should not have any impact which inflow type you use. Yes, the smoke gets cut off to early, when the smoke gets too thin.
At the end of the video you see it.adaptive_domain_error.mp4

Yes, it was intentional in the first place. I wanted to create one smoke puff since I experienced the clipping there the first time. It should not have any impact which inflow type you use. Yes, the smoke gets cut off to early, when the smoke gets too thin. At the end of the video you see it.[adaptive_domain_error.mp4](https://archive.blender.org/developer/F8295544/adaptive_domain_error.mp4)

Added subscriber: @AndrewPrice

Added subscriber: @AndrewPrice

Confirming this bug in Blender 2.82. Changing the Threshold doesn't seem to make a difference.
erasing adaptive domain.mp4

Confirming this bug in Blender 2.82. Changing the Threshold doesn't seem to make a difference. [erasing adaptive domain.mp4](https://archive.blender.org/developer/F8346849/erasing_adaptive_domain.mp4)

Here's another example showing how severe it is. Blend File: gas_explosion4.blend

erasing adaptive domain2.mp4

Here's another example showing how severe it is. Blend File: [gas_explosion4.blend](https://archive.blender.org/developer/F8349196/gas_explosion4.blend) [erasing adaptive domain2.mp4](https://archive.blender.org/developer/F8349202/erasing_adaptive_domain2.mp4)

Added subscriber: @Andrew-57

Added subscriber: @Andrew-57

@Andrew-57 Price I found a workaround:
You can set the fuel in the inflow to a high value like 10 and than set the reaction speed to a high value like 3. than rapidly animate the reaction speed to a low value (so there are still flames) so there is a large blast of energy at the start which emits a lot of smoke and isn’t considered empty by the adaptive domain.

Best regards,
Felix Holzapfel

@Andrew-57 Price I found a workaround: You can set the fuel in the inflow to a high value like 10 and than set the reaction speed to a high value like 3. than rapidly animate the reaction speed to a low value (so there are still flames) so there is a large blast of energy at the start which emits a lot of smoke and isn’t considered empty by the adaptive domain. Best regards, Felix Holzapfel
Contributor

Added subscriber: @vitorboschi

Added subscriber: @vitorboschi

@Wooody
I appreciate the workaround, but I don't think this solves the problem. Not only would it instantly make the adaptive domain box huge (thus defeating it's purpose) but that smoke density will appear in the render which I obviously don't want. At the moment it's just easier to turn it off, but that drastically increases bakes.

@Wooody I appreciate the workaround, but I don't think this solves the problem. Not only would it instantly make the adaptive domain box huge (thus defeating it's purpose) but that smoke density will appear in the render which I obviously don't want. At the moment it's just easier to turn it off, but that drastically increases bakes.

Here's another example with viewport Color Mapping set to show Density. This demonstrates that it recognizes the density but ignores it.
density debug.mp4

Here's another example with viewport *Color Mapping* set to show Density. This demonstrates that it recognizes the density but ignores it. [density debug.mp4](https://archive.blender.org/developer/F8352503/density_debug.mp4)

@Andrew-57 Price I found a workaround:
You can set the fuel in the inflow to a high value like 10 and than set the reaction speed to a high value like 3. than rapidly animate the reaction speed to a low value (so there are still flames) so there is a large blast of energy at the start which emits a lot of smoke and isn’t considered empty by the adaptive domain.

This still works only in some situations.

Best regards,
Felix Holzapfel

@Andrew-57 Price I found a workaround: You can set the fuel in the inflow to a high value like 10 and than set the reaction speed to a high value like 3. than rapidly animate the reaction speed to a low value (so there are still flames) so there is a large blast of energy at the start which emits a lot of smoke and isn’t considered empty by the adaptive domain. This still works only in some situations. Best regards, Felix Holzapfel

Added subscriber: @NathanHodges

Added subscriber: @NathanHodges

Unfortunately, I also have this issue.

AdaptiveDomainCutoff.mp4

Unfortunately, I also have this issue. [AdaptiveDomainCutoff.mp4](https://archive.blender.org/developer/F8354591/AdaptiveDomainCutoff.mp4)

This issue was referenced by ab44b1c9dd

This issue was referenced by ab44b1c9ddc23c6981f7c0dd8dafb522ede04450

This issue was referenced by 32fc22db56

This issue was referenced by 32fc22db567904b62e52e0805a672a7d0366bcc5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Hi everyone! Thanks for all the detailed examples! The reason for the for domain cutting off was the "Threshold" parameter in the "Adaptive Domain" panel. If the value is too high all cells with density values smaller than the threshold value will be considered empty - and therefore cut off.

To fix this issue one has to use a much smaller density threshold. This way cells won't be considered empty so quickly. The fix I just committed (32fc22db56) gives more flexibility in the UI to do just that.

Hi everyone! Thanks for all the detailed examples! The reason for the for domain cutting off was the "Threshold" parameter in the "Adaptive Domain" panel. If the value is too high all cells with density values smaller than the threshold value will be considered empty - and therefore cut off. To fix this issue one has to use a much smaller density threshold. This way cells won't be considered empty so quickly. The fix I just committed (32fc22db5679) gives more flexibility in the UI to do just that.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72253
No description provided.